[gd_scene load_steps=24 format=2]

[ext_resource path="res://interface/PauseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://projectiles/Pan.tscn" type="PackedScene" id=2]
[ext_resource path="res://Level.gd" type="Script" id=3]
[ext_resource path="res://assets/sky/skybox.png" type="Texture" id=4]
[ext_resource path="res://Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://interface/Interface.tscn" type="PackedScene" id=6]
[ext_resource path="res://Smiler.tscn" type="PackedScene" id=7]
[ext_resource path="res://projectiles/Stove1.tscn" type="PackedScene" id=8]
[ext_resource path="res://projectiles/Mustard.tscn" type="PackedScene" id=9]
[ext_resource path="res://projectiles/HotDog.tscn" type="PackedScene" id=10]
[ext_resource path="res://projectiles/Sausage.tscn" type="PackedScene" id=11]
[ext_resource path="res://Spaceship1.tscn" type="PackedScene" id=12]
[ext_resource path="res://projectiles/Cheese.tscn" type="PackedScene" id=13]
[ext_resource path="res://projectiles/Pizza.tscn" type="PackedScene" id=14]
[ext_resource path="res://projectiles/Tomato.tscn" type="PackedScene" id=15]
[ext_resource path="res://projectiles/Pepperoni.tscn" type="PackedScene" id=16]
[ext_resource path="res://projectiles/PizzaOven.tscn" type="PackedScene" id=17]

[sub_resource type="PanoramaSky" id=1]
panorama = ExtResource( 4 )

[sub_resource type="Environment" id=4]
background_mode = 2
background_sky = SubResource( 1 )
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 0.5
ambient_light_sky_contribution = 0.0
fog_depth_begin = 0.0
fog_depth_end = 1679.0
fog_depth_curve = 2.0
fog_height_min = 197.6
fog_height_max = -171.5
ssao_radius = 8.1
ssao_intensity = 4.3
ssao_radius2 = 40.7
ssao_intensity2 = 14.6
ssao_bias = 0.059
ssao_color = Color( 0.180392, 0.207843, 0.25098, 1 )
glow_enabled = true
glow_intensity = 1.86
glow_strength = 0.87
glow_bloom = 0.02
glow_hdr_threshold = 0.44
glow_bicubic_upscale = true

[sub_resource type="PhysicsMaterial" id=3]
rough = true

[sub_resource type="BoxShape" id=5]
extents = Vector3( 30, 1, 30 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 60, 2, 60 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.364706, 0.337255, 0.337255, 1 )

[node name="Main" type="Node" groups=["stage"]]
script = ExtResource( 3 )
waves = [ 12, 45, 30, 45 ]
fall_threshold = -5

[node name="Interface" type="CanvasLayer" parent="."]

[node name="UI" parent="Interface" instance=ExtResource( 6 )]
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PauseMenu" parent="Interface" instance=ExtResource( 1 )]

[node name="WaveSeconds" type="Timer" parent="."]

[node name="Viewport3D" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true
stretch_shrink = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Viewport" type="Viewport" parent="Viewport3D"]
size = Vector2( 512, 300 )
handle_input_locally = false
render_target_update_mode = 3

[node name="WorldEnvironment" type="WorldEnvironment" parent="Viewport3D/Viewport"]
environment = SubResource( 4 )

[node name="DirectionalLight" type="DirectionalLight" parent="Viewport3D/Viewport"]
transform = Transform( 1, 0, 0, 0, 0.986966, -0.160932, 0, 0.160932, 0.986966, 0, 35.6455, 0 )
shadow_enabled = true

[node name="Player" parent="Viewport3D/Viewport" instance=ExtResource( 5 )]
transform = Transform( -0.999666, 0, -0.025828, 0, 1, 0, 0.025828, 0, -0.999666, -7.83633, 20.3171, 0 )

[node name="Platform2" type="StaticBody" parent="Viewport3D/Viewport" groups=["stage"]]
transform = Transform( 0.8, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 2, 46.545 )
physics_material_override = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="Viewport3D/Viewport/Platform2"]
shape = SubResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="Viewport3D/Viewport/Platform2"]
mesh = SubResource( 2 )
material/0 = SubResource( 6 )

[node name="Platform1" type="StaticBody" parent="Viewport3D/Viewport" groups=["stage"]]
transform = Transform( 0.6, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0, 0 )
physics_material_override = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="Viewport3D/Viewport/Platform1"]
shape = SubResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="Viewport3D/Viewport/Platform1"]
mesh = SubResource( 2 )

[node name="wave0 smiler" parent="Viewport3D/Viewport" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.42366, 24.5345 )
coins = 5

[node name="wave0 stove" parent="Viewport3D/Viewport" instance=ExtResource( 8 )]
transform = Transform( 2.75, 0, 0, 0, 2.75, 0, 0, 0, 2.75, 0, 9.06983, 44.2487 )
price = 5

[node name="wave0 pan" parent="Viewport3D/Viewport" instance=ExtResource( 2 )]
transform = Transform( 2.75, 0, 0, 0, 2.75, 0, 0, 0, 2.75, 0, 3.61139, 8.98651 )

[node name="wave1 smiler for 5" parent="Viewport3D/Viewport" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.0189, 6.42366, 24.5345 )
wave = 1
coins = 5

[node name="wave1 smiler for 10" parent="Viewport3D/Viewport" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.9134, 6.42366, 24.5345 )
wave = 1
coins = 10

[node name="wave1 hotdogbun for 5" parent="Viewport3D/Viewport" instance=ExtResource( 10 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 14.4052, 7.82234, -16.3781 )
price = 5
wave = 1

[node name="wave1 mustard for 5" parent="Viewport3D/Viewport" instance=ExtResource( 9 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -12.0381, 8.10253, -13.8641 )
wave = 1
price = 5

[node name="wave1 sausage for 5" parent="Viewport3D/Viewport" instance=ExtResource( 11 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 8.22701, 34.0297 )
wave = 1
price = 5

[node name="wave1 customerhotdog" parent="Viewport3D/Viewport" groups=["wave_spawn"] instance=ExtResource( 12 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -25.1733, -1.12966, -27.9379 )
wave = 1

[node name="wave2 smiler for 5" parent="Viewport3D/Viewport" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.0189, 6.42366, 24.5345 )
wave = 2
coins = 5

[node name="wave2 smiler for 10" parent="Viewport3D/Viewport" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.9134, 6.42366, 30.8498 )
wave = 2
coins = 10

[node name="wave2 hotdogbun for 5" parent="Viewport3D/Viewport" instance=ExtResource( 10 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 14.4052, 7.82234, -16.3781 )
price = 5
wave = 2

[node name="wave2 mustard for 5" parent="Viewport3D/Viewport" instance=ExtResource( 9 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -12.0381, 8.10253, -13.8641 )
wave = 2
price = 5

[node name="wave2 sausage for 5" parent="Viewport3D/Viewport" instance=ExtResource( 11 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 8.22701, 34.0297 )
wave = 2
price = 5

[node name="wave2 customerhotdog" parent="Viewport3D/Viewport" groups=["wave_spawn"] instance=ExtResource( 12 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 19.4029, 0.0309267, -26.3984 )
wave = 2

[node name="wave3 free pizzaoven" parent="Viewport3D/Viewport" instance=ExtResource( 17 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -1.60599, 10.6825, 60.0394 )
wave = 3

[node name="wave3 free crust" parent="Viewport3D/Viewport" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.69644, 9.06996, 55.0445 )
wave = 3

[node name="wave3 tomato for 5" parent="Viewport3D/Viewport" instance=ExtResource( 15 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -15.2137, 5.44715, 62.0514 )
wave = 3
price = 5

[node name="wave3 cheese for 5" parent="Viewport3D/Viewport" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.91919, 5.51147, 61.1271 )
price = 5
wave = 3

[node name="wave3 pepperoni for 5" parent="Viewport3D/Viewport" instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17.2045, 8.7388, 57.1363 )
price = 5
wave = 3

[node name="wave3 customerpizza" parent="Viewport3D/Viewport" groups=["wave_spawn"] instance=ExtResource( 12 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -0.180643, 2.29887, -26.3984 )
wave = 3
food_type = 1

[node name="wave3 smiler for 5" parent="Viewport3D/Viewport" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.0189, 6.42366, 24.5345 )
wave = 3
coins = 5

[node name="wave3 smiler1 for 5" parent="Viewport3D/Viewport" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.9134, 6.42366, 24.5345 )
wave = 3
coins = 10

[node name="wave3 smiler2 for 5" parent="Viewport3D/Viewport" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.747909, 6.42366, 24.5345 )
wave = 3
coins = 10

[node name="MobRespawn1" type="Spatial" parent="Viewport3D/Viewport" groups=["respawn"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15.3874, 10.4274, 64.1882 )

[node name="MobRespawn2" type="Spatial" parent="Viewport3D/Viewport" groups=["respawn"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.4484, 9.13629, 64.056 )

[node name="MobRespawn3" type="Spatial" parent="Viewport3D/Viewport" groups=["respawn"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.761215, 15.0143, -8.55303 )

[connection signal="timeout" from="WaveSeconds" to="." method="_on_WaveSeconds_timeout"]
